--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -7,11 +7,11 @@ description: About me
 I prefer to avoid disclosing certain type of information about my self, my
 family or friends on the public internet resources. As such, on this page I
 would not include my current employer or location beyond the country of
-residence. If for some reason you require that information, please contact me
-directly via email - v.rybynok@gmail.com
+residence. If for some reason you require that information or my full CV, please
+contact me directly via email - v.rybynok@gmail.com
 
 One of my first childhood memories, perhaps from an age of 3 or 4, is helping my
-father building a light music box back in the days of Soviet Union where it was
+father building a light music box back in the days of Soviet Union when it was
 hard to get such devices from the electronics shops. My father explained to me
 what are transistors, cascading amplifiers and frequency filters, and how to use
 lacquers to colour incandescent light bulbs - all are still relevant today.
@@ -25,3 +25,12 @@ He always had some cool gadgets in his house, such as
 I visited my grandparents nearly every school holiday. That is when I became
 fascinated with computers - the electronic machines that later became my
 passion, profession and the lifestyle.
+
+My native language is Russian and when I started using computers I did not even
+know how to read Latin alphabet. Yet, I had a concept of computer program and
+[Pravitz 8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
+English with examples written in Basic. I started by coping examples into REPL
+console and translating the manual into Russian with a dictionary, word-by-word.
+Since I did not know how to pronounce English words correctly I invented my own
+pronunciation&nbsp;– some of those words are still haunting my accent even after
+living in the UK for more than 20 years!
