--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -18,8 +18,8 @@ lacquers to colour incandescent light bulbs - all are still relevant today.
 Except, colouring incandescent bulbs - one, would, likely use LED lights for
 that purpose these days.
 
-My grandfather was a director of a factory that produced TV sets back in 80th.
-He always had some cool gadgets in his house, such as
+My grandfather was director of a factory that produced TV sets back in 80th. He
+always had some cool gadgets in his house, such as
 [first personal computers](https://en.wikipedia.org/wiki/Pravetz_computers) and
 [TV game consoles](https://ru.wikibooks.org/wiki/Советские_телевизионные_игровые_приставки/Фабричные_телеигры).
 I visited my grandparents nearly every school holiday. That is when I became
@@ -28,8 +28,8 @@ passion, profession and the lifestyle.
 
 My native language is Russian and when I started using computers I did not even
 know how to read Latin alphabet. Yet, I had a concept of computer program and
-[Pravitz 8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
-English with examples written in Basic. I started by coping examples into REPL
+[Pravetz 8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
+English with examples written in BASIC. I started by coping examples into REPL
 console and translating the manual into Russian with a dictionary, word-by-word.
 Since I did not know how to pronounce English words correctly I invented my own
 pronunciation&nbsp;– some of those words are still haunting my accent even after
