--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -4,33 +4,42 @@ dateUpdated: '2023-02-20'
 description: About me
 ---
 
-I prefer to avoid disclosing certain type of information about my self, my
-family or friends on the public internet resources. As such, on this page I
-would not include my current employer or location beyond the country of
-residence. If for some reason you require that information or my full CV, please
-contact me directly via email - v.rybynok@gmail.com
+I prefer not to disclose certain types of information about myself, my family,
+or my friends on public internet resources. Therefore, on this page, I will not
+provide details of my current employer or location beyond my country of
+residence. If you require additional information or my full CV, please contact
+me directly via email at v.rybynok@gmail.com.
 
-One of my first childhood memories, perhaps from an age of 3 or 4, is helping my
-father building a light music box back in the days of Soviet Union when it was
-hard to get such devices from the electronics shops. My father explained to me
-what are transistors, cascading amplifiers and frequency filters, and how to use
-lacquers to colour incandescent light bulbs - all are still relevant today.
-Except, colouring incandescent bulbs - one, would, likely use LED lights for
-that purpose these days.
+One of my earliest childhood memories, from when I was perhaps 3 or 4 years old,
+is of helping my father build a light music box. This was during the time of the
+late Soviet Union, where it was difficult to obtain such devices from
+electronics shops. My father explained to me what transistors, cascading
+amplifiers, and frequency filters were, as well as how to use lacquers to color
+incandescent light bulbs. All are still relevant today. Except, colouring
+incandescent bulbs - one, would, likely use LED lights for that purpose these
+days!
 
-My grandfather was director of a factory that produced TV sets back in 80th. He
-always had some cool gadgets in his house, such as
+My grandfather was the director of a factory that produced TV sets back in 80th.
+He always had some latest cool gadgets in his house, such as
 [first personal computers](https://en.wikipedia.org/wiki/Pravetz_computers) and
 [TV game consoles](https://ru.wikibooks.org/wiki/Советские_телевизионные_игровые_приставки/Фабричные_телеигры).
-I visited my grandparents nearly every school holiday. That is when I became
-fascinated with computers - the electronic machines that later became my
-passion, profession and the lifestyle.
+I used to visit my grandparents during almost every school holiday, and it was
+during these visits that I became fascinated with computers. These electronic
+machines soon became my passion, my profession, and a lifestyle.
 
-My native language is Russian and when I started using computers I did not even
-know how to read Latin alphabet. Yet, I had a concept of computer program and
-[Pravetz 8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
-English with examples written in BASIC. I started by coping examples into REPL
+My native language is Russian and when I first started using computers I did not
+even know how to read Latin alphabet. Yet, I had a concept of computer program
+and [Pravetz 8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
+English with examples written in BASIC. I began by coping examples into REPL
 console and translating the manual into Russian with a dictionary, word-by-word.
 Since I did not know how to pronounce English words correctly I invented my own
-pronunciation&nbsp;– some of those words are still haunting my accent even after
-living in the UK for more than 20 years!
+pronunciation&nbsp;– some of those words still linger in my accent even after
+more than 20 years of living in the UK!
+
+I completed my studies at a physics and mathematics specialized school in Moscow
+in 1996, after which I enrolled at the National Research University of
+Electronic Technology [MIET](https://eng.miet.ru/), Faculty of Microelectronics
+and Technical Cybernetics. My aspirations were to become a computer games
+developer. However, at the time there were no specific courses for this field in
+Russian universities. As a result, I picked a more general specialisation -
+Computer Systems and Networks.
