--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -4,25 +4,19 @@ dateUpdated: '2023-02-20'
 description: Про меня
 ---
 
-# About This Site
+Я предпочитаю не раскрывать определенный тип информации о себе, своей семье или
+друзьях в общедоступных интернет-ресурсах. Поэтому, на этой странице не будет
+подробностей о моём текущем работодателе или местоположении более точном чем
+страна проживания. Если вам нужна дополнительная информация или моё полное
+резюме, пожалуйста, свяжитесь со мной напрямую по электронной почте
+v.rybynok@gmail.com.
 
-Hello, I'm an example site that uses the Hugo Tufte theme.
-
-Here is a bullet list:
-
-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-  incididunt ut labore et dolore magna aliqua.
-- Arcu felis bibendum ut tristique et. Volutpat odio facilisis mauris sit amet
-  massa.
-- Sed id semper risus in hendrerit gravida rutrum.
-  - Risus pretium quam vulputate dignissim suspendisse in est ante. Bibendum
-    neque egestas congue quisque egestas diam in arcu.
-  - Nulla porttitor massa id neque aliquam. Laoreet non curabitur gravida arcu
-    ac tortor dignissim convallis.
-- Sit amet consectetur adipiscing elit.
-
-{/* | X | Y |
-|---|---|
-| 1 | 2 |
-
-Проверка на Русском языке */}
+Одно из самых ранних воспоминаний моего детства, когда мне, было наверное 3 или
+4 года, это как мы с отцом собираем светомузыку для установки на шкаф в большой
+комнате. Это было время позднего Советского Союза, начало перестройки и
+гласности, когда уже было трудно приобрести подобные устройства в магазинах
+бытовой техники. Мой отец объяснил мне, что такое транзисторы, каскадные
+усилители и частотные фильтры, и показал как использовать цветные лаки для
+окрашивания ламп накаливания. Все это по-прежнему актуально в наши дни. За
+исключением, возможно, окрашивания ламп накаливания - для этой цели в наше
+время, больше подойдут лампы на светодиодах!
