--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -11,7 +11,7 @@ residence. If you require additional information or my full CV, please contact
 me directly via email at v.rybynok@gmail.com.
 
 One of my earliest childhood memories, from when I was perhaps 3 or 4 years old,
-is of helping my father build a light music box. This was during the time of the
+is of helping my father build a light organ box. This was during the time of the
 late Soviet Union, where it was difficult to obtain such devices from
 electronics shops. My father explained to me what transistors, cascading
 amplifiers, and frequency filters were, as well as how to use lacquers to color
