--- a/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
@@ -7,6 +7,7 @@ description:
 
 ### BLTouch Leveling Sensor wiring
 
+We are currently using this sensor:<br />
 https://www.ebay.co.uk/itm/204184579333
 
 #### 3 Pins
