--- a/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
@@ -42,7 +42,7 @@ description:
 | J6        | Z Top    |
 | J9        | Z Bottom |
 
-### Funmat HT stepper motor wiring
+### Funmat HT stepper motors wiring
 
 | Colour | Function  |
 | ------ | --------- |
