--- a/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
@@ -27,4 +27,4 @@ https://www.ebay.co.uk/itm/204184579333
 
 ### References
 
-https://reprap.org/forum/read.php?415,880766
+* [Idiot's guide to getting a bltouch working (reprap.org/forum)](https://reprap.org/forum/read.php?415,880766)
