--- a/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
@@ -27,4 +27,5 @@ https://www.ebay.co.uk/itm/204184579333
 
 ### References
 
-* [Idiot's guide to getting a bltouch working (reprap.org/forum)](https://reprap.org/forum/read.php?415,880766)
+* [Idiot's guide to getting a bltouch working (reprap.org forum)](https://reprap.org/forum/read.php?415,880766)
+* [HTA3D 3DTouch assembly and configuration](https://www.hta3d.com/en/blog/3dtouch-configuration)
