--- a/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
@@ -50,3 +50,9 @@ description:
 | Red    | Direction |
 | Yellow | Enable    |
 | Blue   | GND       |
+
+### References
+
+* [INTAMSYS Mother Board V5.0 with driver boards (visionminer.com shop)](https://www.anodas.lt/en/intamsys-mother-board-v5-0-with-driver-boards)
+* [Mother Board V5 (anodas.lt shop)](https://www.hta3d.com/en/blog/3dtouch-configuration)
+* [Intamsys Motherboard V5.0 with driver boards HT (igo3d.com shop)](https://www.igo3d.com/intamsys-motherboard-v5-with-driver-boards)
