--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -41,5 +41,5 @@ in 1996, after which I enrolled at the National Research University of
 Electronic Technology [MIET](https://eng.miet.ru/), Faculty of Microelectronics
 and Technical Cybernetics. My aspirations were to become a computer games
 developer. However, at the time there were no specific courses for this field in
-Russian universities. As a result, I picked a more general specialisation -
+Russian universities. As a result, I picked a more general specialisation&nbsp;–
 Computer Systems and Networks.
