--- a/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
@@ -53,6 +53,6 @@ description:
 
 ### References
 
-* [INTAMSYS Mother Board V5.0 with driver boards (visionminer.com shop)](https://www.anodas.lt/en/intamsys-mother-board-v5-0-with-driver-boards)
+* [INTAMSYS Mother Board V5.0 with driver boards (visionminer.com shop)](https://visionminer.com/products/mother-board)
 * [Mother Board V5 (anodas.lt shop)](https://www.anodas.lt/en/intamsys-mother-board-v5-0-with-driver-boards)
 * [Intamsys Motherboard V5.0 with driver boards HT (igo3d.com shop)](https://www.igo3d.com/intamsys-motherboard-v5-with-driver-boards)
