--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -66,26 +66,29 @@ Dynamic Pulsatile Spectroscopy for Non-Invasive Blood Glucose monitoring.
 
 In 2001, I ventured to the UK to explore the country's language, culture, and
 gain independence. Shortly after, I was accepted into the MSc program in Medical
-Electronics and Physics at Queen Mary, University of London, where I immersed
-myself in the study of biomedical engineering. In 2003, I constructed my first
-EEG signals amplifier for human brain activity analysis. After successfully
-defending my master's thesis, I received an offer to pursue a PhD in Biomedical
-Engineering at City, University of London. My doctoral research revolved around
-developing a non-invasive blood glucose monitoring technique that I named
-Dynamic Pulsatile Spectroscopy. */}
+Electronics and Physics at [Queen Mary, University of London](https://www.qmul.ac.uk/),
+where I immersed myself in the study of biomedical engineering. In 2003, I
+constructed my first EEG signals amplifier for human brain activity
+analysis. After successfully defending my master's thesis, I received an offer
+to pursue a PhD in Biomedical Engineering at City, University of London. My
+doctoral research revolved around developing a non-invasive blood glucose
+monitoring technique that I named Dynamic Pulsatile Spectroscopy.
+*/}
 
 After completing my undergraduate degree in computer engineering, I moved to the
 UK in 2001 to study English language and culture and gain experience living
 abroad. The following year, I was accepted into the MSc program in Medical
-Electronics and Physics at Queen Mary, University of London. While there, I
+Electronics and Physics at
+[Queen Mary, University of London](https://www.qmul.ac.uk/). While there, I
 built my first EEG signal amplifier for human brain analysis and defended my
 masters thesis.
 
 Following my MSc, I was offered a PhD position in Biomedical Engineering at
-City, University of London. My research focused on developing Dynamic Pulsatile
-Spectroscopy for Non-Invasive Blood Glucose Monitoring, and I defended my thesis
-in 2009. I continued working on this research as a Postdoctoral Research
-Assistant and then a Research Fellow at City, University of London.
+[City, University of London](https://www.city.ac.uk/). My research focused on
+developing Dynamic Pulsatile Spectroscopy for Non-Invasive Blood Glucose
+Monitoring, and I defended my thesis in 2009. I continued working on this
+research as a Postdoctoral Research Assistant and then a Research Fellow at
+City, University of London.
 
 Between 2010 and 2014, UK universities faced a challenging time. The government
 ceased providing interest-free student loans, and UK and EU students were
@@ -106,6 +109,7 @@ their cutting-edge analytical instruments.
 
 Currently, I reside in Cambridge and am still employed by the same company. Over
 the years, I have been presented with numerous opportunities to work on a
-diverse range of computer systems, ranging from tiny 8-bit controllers to
-real-time network-synchronized sensor arrays. I can now proudly claim that I am
-"a physicist who thinks he is a programmer"!
+diverse range of computer systems, from tiny 8-bit controllers to real-time
+network-synchronized sensor arrays. I can now proudly claim that I am "a
+physicist who thinks he is a programmer" and this time my physics skills need
+improvement!
