--- a/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
@@ -51,8 +51,15 @@ description:
 | Yellow | Enable    |
 | Blue   | GND       |
 
+### Funmat HT Touch Panel
+
+Possibly, TJC4024T032_011
+
+
 ### References
 
 * [INTAMSYS Mother Board V5.0 with driver boards (visionminer.com shop)](https://visionminer.com/products/mother-board)
 * [Mother Board V5 (anodas.lt shop)](https://www.anodas.lt/en/intamsys-mother-board-v5-0-with-driver-boards)
 * [Intamsys Motherboard V5.0 with driver boards HT (igo3d.com shop)](https://www.igo3d.com/intamsys-motherboard-v5-with-driver-boards)
+* [Touch panel Intamsys Funmat HT (machines-3d.com shop)](https://www.machines-3d.com/en/touch-panel-intamsys-funmat-ht-xml-856_935_601-2700.html)
+* [Knob Controller Intamsys Funmat HT (machines-3d.com shop)](https://www.machines-3d.com/en/knob-controller-intamsys-funmat-ht-xml-856_935_601-2689.html)
