--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -31,7 +31,7 @@ machines soon became my passion, my profession, and a lifestyle.
 
 My native language is Russian and when I first started using computers I did not
 even know how to read Latin alphabet. Yet, I had a concept of computer program
-and [Pravetz 8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
+and [Pravetz&nbsp;8D](https://en.wikipedia.org/wiki/Oric#Clones) computer manual in
 English with examples written in BASIC. I began by coping examples into REPL
 console and translating the manual into Russian with a dictionary, word-by-word.
 Since I did not know how to pronounce English words correctly I invented my own
