--- a/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-marlin/2023-04-17.index.en.mdx
@@ -33,6 +33,9 @@ description:
 | 086 | Y Driver Step          |
 | 097 | X Zero                 |
 
+Pin mapping for the 1280 and 2560 is located in
+`Marlin/src/HAL/AVR/fastio/fastio_1280.h`
+
 ### Intamsys 5.0 connectors
 
 | Connector | Function |
