--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -4,6 +4,8 @@ dateUpdated: '2023-02-20'
 description: About me
 ---
 
+### Private Data
+
 I prefer not to disclose certain types of information about myself, my family,
 or my friends on public internet resources. Therefore, on this page, I will not
 provide details of my current employer or location beyond my country of
@@ -40,10 +42,10 @@ more than 20 years of living in the UK!
 
 I completed my studies at a physics and mathematics specialized school in Moscow
 in 1996, after which I enrolled at the National Research University of
-Electronic Technology [MIET](https://eng.miet.ru/), Faculty of Microelectronics
-and Technical Cybernetics. My aspirations were to become a computer games
-developer. However, at the time there were no specific courses for this field in
-Russian universities. As a result, I picked a more general specialisation&nbsp;–
+Electronic Technology [MIET](https://eng.miet.ru/), Faculty of Microdevices and
+Technical Cybernetics. My aspirations were to become a computer games developer.
+However, at the time there were no specific courses for this field in Russian
+universities. As a result, I picked a more general specialisation&nbsp;–
 Computer Systems and Networks.
 
 During my studies from 1996 to 2001, I was exposed to a diverse range of
