--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -4,12 +4,16 @@ dateUpdated: '2023-02-20'
 description: Про меня
 ---
 
+### Личные Данные
+
 Я предпочитаю не раскрывать определенный тип информации о себе, своей семье или
 друзьях в общедоступных интернет-ресурсах. Поэтому, на этой странице не будет
 подробностей о моём текущем работодателе или местоположении более точном чем
 страна проживания. Если вам нужна дополнительная информация или моё полное
 резюме, пожалуйста, свяжитесь со мной напрямую по электронной почте
 v.rybynok@gmail.com.
+
+### Краткая Биография
 
 Одно из самых ранних воспоминаний моего детства, когда мне, было наверное 3 или
 4 года, это как мы с отцом собираем светомузыку для установки на шкаф в большой
@@ -20,3 +24,87 @@ v.rybynok@gmail.com.
 окрашивания ламп накаливания. Все это по-прежнему актуально в наши дни. За
 исключением, возможно, окрашивания ламп накаливания - для этой цели в наше
 время, больше подойдут лампы на светодиодах!
+
+Мой дедушка был директором завода, который производил телевизоры в 80-х годах. В
+его доме всегда было много интересных новинок электроники, такие как
+[первые персональные компьютеры](https://en.wikipedia.org/wiki/Pravetz_computers)
+и
+[телевизионные игровые приставки](https://ru.wikibooks.org/wiki/Советские_телевизионные_игровые_приставки/Фабричные_телеигры).
+Я часто бывал у дедушки с бабушкой во время школьных каникул. Именно во время
+этих посещений я увлекся компьютерами. Эти вычислительные машины стали моей
+страстью, профессией и образом жизни.
+
+Мой родной язык - русский. Когда я впервые начал пользоваться компьютерами, я не
+знал даже латинского алфавита. Однако у меня было представление об алгоритмах, и
+руководство на английском языке для компьютера
+[Pravetz 8D](https://en.wikipedia.org/wiki/Oric#Clones) с примерами на BASIC. Я
+начал копировать примеры в командную строку и переводить руководство на русский
+язык с помощью словаря - каждое слово в отдельности. Поскольку я не знал, как
+правильно произносить английские слова, я придумал свое собственное
+произношение - некоторые из этих слов до сих пор звучат в моем акценте, даже
+спустя более 20-ти лет проживания в Великобритании!
+
+Я закончил физико-математический класс в Москве в 1996 году, после которого
+поступил в Национальный Исследовательский Университет
+[МИЭТ](https://eng.miet.ru/) в Зеленограде, на факультет микроприборов и
+технической кибернетики. Тогда моей целью было стать разработчиком компьютерных
+игр. Однако в то время в российских университетах не было специальностей в этой
+области. В качестве компромисса я выбрал более общую специализацию - Инженер по
+специальности вычислительные машины, комплексы, системы и сети.
+
+В течении университетского учебного курса с 1996 по 2001 годы, у меня была
+возможность изучать разнообразные инженерные дисциплины, такие как аналоговая и
+цифровая электроника, радиочастотные приборы и системы с низким уровнем шума,
+сетевые протоколы, проектирование печатных плат и микрочипов, и инженерная
+графика. Этот период моей жизни совпал со взрывным развитием интернет-компаний
+(dot-com boom), становлением свободной операционной системы Linux и
+трансформацией маленьких компаний компьютерных игр в большие международные
+игровые студии. Однако мои интересы со временем изменились, и к 2009 году я
+увлекся робототехникой и мозг-компьютерными интерфейсами. Это изменение фокуса
+побудило меня переосмыслить видение своей будущей профессии, и в итоге я решил
+отказаться от карьеры разработчика компьютерных игр.
+
+После окончания университета в 2001 году, я перебрался в Великобританию, чтобы
+изучать английский язык и культуру, а также получить опыт жизни за границей. В
+следующем году я был принят на программу магистратуры (MSc) в области
+медицинской электроники и физике в (Университете королевы Мэри в
+Лондоне)[https://www.qmul.ac.uk/]. Во время учебы я создал свой первый усилитель
+сигналов ЭЭГ для анализа головного мозга человека и успешно защитил магистерскую
+диссертацию.
+
+После получения степени магистра наук в области "Медицинская электроника и
+физика" в Университете Королевы Мэри в Лондоне, мне было предложено место
+аспиранта (PhD) в области "Биомедицинская инженерия" в (Университете Сити в
+Лондоне)[https://www.city.ac.uk/]. Мои исследования были направлены на
+разработку Динамической Пульсатильной Спектроскопии для Неинвазивного Измерения
+Содержания Глюкозы в Крови. В 2009 году я успешно защитил диссертацию и получил
+степень доктора философии в области биоинженерных наук. После аспирантуры я
+продолжил работать над тем же исследовательским проектом в начале в качестве
+младшего, затем старшего научного сотрудника в Университете Сити в Лондоне.
+
+Между 2010 и 2014 годами вузы Великобритании столкнулись с серьёзными
+финансовыми трудностями. Правительство перестало предоставлять студенческие
+займы без процентов, а студенты из Великобритании и Евросоюза стали вынуждены
+платить за обучение по-тем же ценам, как и студенты из других стран. Кроме того,
+значительно сократились средства выделяемые на научные исследования. Несмотря на
+значительный прогресс в исследованиях, получения нескольких грантов и подачу
+двух заявок на патенты, университет решил прекратить мой проект по неинвазивному
+измерению содержания глюкозы в крови.
+
+Хотя мне был предложен контракт для продолжения научных исследований в других
+областях и преподавания в университете, я решил взять перерыв в академической
+работе и продолжить карьеру в индустрии в качестве системного программиста.
+Несмотря на то, что я считал себя "программистом, который думает, что он физик",
+я ощущал, что мои навыки программирования нуждаются в улучшении, а также мне
+необходим опыт вне академической среды. В 2014 году я присоединился к
+научно-исследовательской приборостроительной компании в Кембридже в качестве
+программиста-исследователя, чтобы работать над интерфейсами пользователя и
+системами управления для передовых измерительных и аналитических приборов,
+которые производит компания.
+
+В настоящий момент я живу в Кембридже и продолжаю работать в той же компании. За
+годы работы мне представилось множество возможностей поработать с различными
+компьютерными системами, от маленьких 8-битных контроллеров до сложных сенсоров
+объединённых в сеть с синхронизацией реального времени. Теперь я могу с
+уверенностью сказать, что я "физик, который думает, что он программист", и на этот
+раз мои навыки в области физики нуждаются в улучшении!
