--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -8,7 +8,7 @@ description: About me
 
 I prefer not to disclose certain types of information about myself, my family,
 or my friends on public internet resources. Therefore, on this page, I will not
-provide details of my current employer or location beyond my country of
+provide details of my current employer or location beyond my city of
 residence. If you require additional information or my full CV, please contact
 me directly via email at v.rybynok@gmail.com.
 
