--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -6,7 +6,7 @@ description: Про меня
 
 ### Личные Данные
 
-Я предпочитаю не раскрывать определенный тип информации о себе, своей семье или
+Я предпочитаю не раскрывать определенные типы информации о себе, своей семье или
 друзьях в общедоступных интернет-ресурсах. Поэтому, на этой странице не будет
 подробностей о моём текущем работодателе или местоположении более точном чем
 город проживания. Если вам нужна дополнительная информация или моё полное
@@ -100,7 +100,7 @@ v.rybynok@gmail.com.
 что он физик", я ощущал, что мои навыки программирования нуждаются в улучшении,
 а также мне необходим опыт вне академической среды. В 2014 году я устроился на
 работу в научно-исследовательскую приборостроительную компанию в Кембридже в
-качестве программиста-исследователя, чтобы работать над интерфейсами
+качестве инженера-программиста-исследователя, чтобы работать над интерфейсами
 пользователя и системами управления для передовых измерительных и аналитических
 приборов, которые производит компания.
 
