--- a/pages/about/2023-02-01.index.en.mdx
+++ b/pages/about/2023-02-01.index.en.mdx
@@ -106,8 +106,8 @@ career in industry as an Embedded Software Engineer. Despite thinking of myself
 as "a programmer who thinks he is a physicist", I felt that my programming
 skills needed improvement and that I required experience outside academia. In
 2014 I joined a mid-sized scientific instrumentation company in Cambridge as
-R&D&nbsp; Software Engineer to work on the interface and control software for
-their cutting-edge analytical instruments.
+R&D&nbsp;Software Engineer to work on the user interface and control software
+for their cutting-edge analytical instruments.
 
 Currently, I reside in Cambridge and am still employed by the same company. Over
 the years, I have been presented with numerous opportunities to work on a
