--- a/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
@@ -33,6 +33,7 @@ https://www.ebay.co.uk/itm/204184579333
 - [M420 - Bed Leveling State](https://marlinfw.org/docs/gcode/M420.html)
 - [M421 - Set Mesh Value](https://marlinfw.org/docs/gcode/M421.html)
 - [M851 - XYZ Probe Offset](https://marlinfw.org/docs/gcode/M851.html)
+- [M48 - Probe Repeatability Test](https://marlinfw.org/docs/gcode/M048.html)
 
 ### Printing surface mesh visualisation
 
