--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -26,7 +26,7 @@ v.rybynok@gmail.com.
 время, больше подойдут лампы на светодиодах!
 
 Мой дедушка был директором завода, который производил телевизоры в 80-х годах. В
-его доме всегда было много интересных новинок электроники, такие как
+его доме всегда было много интересных новинок электроники, таких как
 [первые персональные компьютеры](<https://ru.wikipedia.org/wiki/Правец_(компьютер)>)
 и
 [телевизионные игровые приставки](https://ru.wikibooks.org/wiki/Советские_телевизионные_игровые_приставки/Фабричные_телеигры).
