--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -7,7 +7,7 @@ description: Про меня
 ### Личные Данные
 
 Я предпочитаю не раскрывать определенные типы информации о себе, своей семье или
-друзьях в общедоступных интернет-ресурсах. Поэтому, на этой странице не будет
+друзьях на общедоступных интернет-ресурсах. Поэтому, на этой странице не будет
 подробностей о моём текущем работодателе или местоположении более точном чем
 город проживания. Если вам нужна дополнительная информация или моё полное
 резюме, пожалуйста, свяжитесь со мной напрямую по электронной почте
@@ -60,7 +60,7 @@ v.rybynok@gmail.com.
 графика. Этот период моей жизни совпал со взрывным развитием интернет-компаний
 (dot-com boom), становлением свободной операционной системы Linux и
 трансформацией маленьких компаний компьютерных игр в большие международные
-игровые студии. Однако мои интересы со временем изменились, и к 2009 году я
+игровые студии. Однако мои интересы со временем изменились, и к 1999 году я
 увлекся робототехникой и мозг-компьютерными интерфейсами. Это изменение фокуса
 побудило меня переосмыслить видение своей будущей профессии, и в итоге я решил
 отказаться от карьеры разработчика компьютерных игр.
