--- a/pages/about/2023-02-01.index.ru.mdx
+++ b/pages/about/2023-02-01.index.ru.mdx
@@ -87,11 +87,11 @@ v.rybynok@gmail.com.
 Между 2010 и 2014 годами вузы Великобритании столкнулись с серьёзными
 финансовыми трудностями. Правительство перестало предоставлять студенческие
 займы без процентов, а студенты из Великобритании и Евросоюза стали вынуждены
-платить за обучение по-тем же ценам, как и студенты из других стран. Кроме того,
-значительно сократились средства выделяемые на научные исследования. Несмотря на
-значительный прогресс в моих исследованиях, получения нескольких грантов и
-подачу двух заявок на патенты, университет решил прекратить мой проект по
-неинвазивному измерению содержания глюкозы в крови.
+платить за обучение по-тем же расценкам, как студенты из других стран. Кроме
+того, значительно сократились средства выделяемые на научные
+исследования. Несмотря на значительный прогресс в исследованиях, получения
+нескольких грантов и подачу двух заявок на патенты, университет решил прекратить
+мой проект по неинвазивному измерению содержания глюкозы в крови.
 
 Хотя мне был предложен контракт для продолжения научной работы в других областях
 и преподавания в университете, я решил взять перерыв в академической
