--- a/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
+++ b/pages/notes/funmat-ht-intamsys-50-bltouch/2023-04-18.index.en.mdx
@@ -6,7 +6,7 @@ description: Adding BLTouch sensor alongside with the built-in toggle sensor.
 
 ### BLTouch Leveling Sensor wiring
 
-We are currently using this sensor:<br />
+We are currently using the following sensor:<br />
 https://www.ebay.co.uk/itm/204184579333
 
 #### 3 Pins
