--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -27,17 +27,35 @@ Instead, `src` should be `./static/front-end-doom.jpg` and a custom rehype
 pluggin (rehypeImgSize -> rehypeImg?) should update it to
 `/static/blog/how-i-ended-up-here/front-end-doom.jpg`
 
+#### &#9744; SEO
+
+https://github.com/garmeeh/next-seo
+
 ### Longer and complex investigations
-
-#### &#9745; Add comments and reactions to blog posts
-
-https://giscus.app/
-
-#### &#9744; Replace Styled Components with Module SCSS and Tailwind
-
-<p />
 
 #### &#9744; Use @next/font
 
 https://nextjs.org/docs/api-reference/next/font<br />
 https://nextjs.org/docs/basic-features/font-optimization
+
+#### &#9744; PWA
+
+https://github.com/shadowwalker/next-pwa
+
+#### &#9744; Analytics
+
+https://splitbee.io/
+
+#### &#9745; Add comments and reactions to blog posts
+
+https://giscus.app/
+
+#### &#9745; Replace Styled Components with Module SCSS and Tailwind
+
+<p />
+
+### Further Research
+
+#### &#9744; Adobe React Aria based mobile menu
+
+https://react-spectrum.adobe.com/react-aria/useDialog.html
