--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -14,6 +14,8 @@ pin: 20
 
 #### &#9744; Ensure that dates in Blog and Notes do not wrap on small screens
 
+#### &#9744; Hash links for page MDX headings
+
 <p />
 
 ### More involved changes and improvements
