--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -16,6 +16,8 @@ pin: 20
 
 #### &#9744; Hash links for page MDX headings
 
+These are also known as [hash anchors](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#linking_to_an_element_on_the_same_page).
+
 <p />
 
 ### More involved changes and improvements
@@ -61,3 +63,8 @@ https://giscus.app/
 #### &#9744; Adobe React Aria based mobile menu
 
 https://react-spectrum.adobe.com/react-aria/useDialog.html
+
+#### &#9744; URL validator
+
+Find how to automatically check that all site-refferenced resources are alive
+and valid.
