--- a/pages/notes/this-site/2023-02-06.index.en.mdx
+++ b/pages/notes/this-site/2023-02-06.index.en.mdx
@@ -35,6 +35,11 @@ pluggin (rehypeImgSize -> rehypeImg?) should update it to
 
 https://github.com/garmeeh/next-seo
 
+#### &#9744; Modal images on click
+
+It should be possible to click on images and open then in full size modal window
+and original format - i.e. without using Next.js Image component.
+
 ### Longer and complex investigations
 
 #### &#9744; Use @next/font
